Wed Nov 18 03:20:00 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * docs/manual/appendix/thirdparty.tex:
        * docs/manual/manual.pdf:

	  . Fixed obsolete text in the section of the user's manual about
	    building ACE, TAO, CIAO, and DAnCE.

Wed Nov 18 03:08:05 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * docs/manual/install.tex:
        * docs/manual/manual.pdf:
        * docs/manual/manual.tex:
        * docs/manual/runtime:
        * docs/manual/runtime/logging.tex:
        * docs/manual/runtime/runtime.tex:
        * docs/manual/runtime/testing.tex:

          . Update the user's manual. Some sections have been commited out since
            the need to be overhauled.

Fri Nov 13 21:17:31 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Dataset_Result.cpp:

          . Bug fix where the algorithm failed to run if there was not
            a viewpoint and there was not any groupings.

Fri Nov 13 20:53:14 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Aspect.h:
        * cuts/utils/unite/Dataset_Result.cpp:
        * cuts/utils/unite/Unite_App.cpp:

          . Bug fix where now aspects partially work with groups. Aspects
            can be used with groups if there is no viewpoint.

Fri Nov 13 04:55:15 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Aspect.h:
        * cuts/utils/unite/Dataflow_Graph.h:
        * cuts/utils/unite/Dataset_Repo.h:
        * cuts/utils/unite/Dataset_Result.h:
        * cuts/utils/unite/Doxygen:
        * cuts/utils/unite/Log_Format.h:
        * cuts/utils/unite/Log_Format_Compiler.h:
        * cuts/utils/unite/Log_Format_Data_Entry.h:
        * cuts/utils/unite/Presentation_Service.h:
        * cuts/utils/unite/Presentation_Service_Manager.h:
        * cuts/utils/unite/Relation.h:
        * cuts/utils/unite/Unite_Test.h:
        * cuts/utils/unite/Variable.h:
